- Minor bug fixes:      - toCamelCase method in FXUtils doesn't work with string containing special characters with length of 1 - Added static method in DialogUtility class for creating Error Dialogs With Provided title & message body - Added logic for displaying alert after providing empty new Writer name in edit writers pane in MovieController - Created btnScrapeData bindings with provided url containing "https://www.imdb.com/title/" and for provided url length has to be larger than same imdb string as before